# rrag

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: publish-crates.yml
crates/rgraph/: CHANGELOG.md  Cargo.toml  README.md
crates/rgraph/src/: agents.rs  core.rs  execution.rs  execution_old.rs  lib.rs  nodes.rs  observability.rs  prelude.rs  routing.rs  rrag_integration.rs  state.rs  tools.rs
crates/rgraph/src/nodes/: agent.rs  condition.rs  tool.rs  transform.rs
crates/rrag/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  GUIDE.md  README.md  test_trait_object_simple
crates/rrag/examples/: storage_demo.rs
crates/rrag/src/: agent.rs  document.rs  embeddings.rs  error.rs  lib.rs  lib_minimal_attempt.rs  memory.rs  pipeline.rs  retrieval_core.rs  storage.rs  storage_legacy.rs  streaming.rs  system.rs  tools.rs
crates/rrag/src/agent/: agent.rs  builder.rs  config.rs  executor.rs  memory.rs  mod.rs
crates/rrag/src/caching/: cache_core.rs  embedding_cache.rs  metrics.rs  mod.rs  persistence.rs  policies.rs  query_cache.rs  result_cache.rs  semantic_cache.rs
crates/rrag/src/evaluation/: benchmarks.rs  end_to_end.rs  generation_eval.rs  metrics.rs  mod.rs  ragas.rs  retrieval_eval.rs
crates/rrag/src/graph_retrieval/: algorithms.rs  builder.rs  config.rs  entity.rs  graph.rs  mod.rs  query_expansion.rs  retriever.rs  storage.rs
crates/rrag/src/incremental/: batch_processor.rs  change_detection.rs  index_manager.rs  integrity.rs  mod.rs  monitoring.rs  rollback.rs  vector_updates.rs  versioning.rs
crates/rrag/src/multimodal/: chart_processor.rs  document_parser.rs  embedding_fusion.rs  image_processor.rs  layout_analysis.rs  mod.rs  ocr.rs  retrieval.rs  table_processor.rs
crates/rrag/src/observability/: alerting.rs  dashboard.rs  export.rs  health.rs  logging.rs  metrics.rs  mod.rs  monitoring.rs  profiling.rs  retention.rs
crates/rrag/src/query/: classifier.rs  decomposer.rs  expander.rs  hyde.rs  mod.rs  rewriter.rs
crates/rrag/src/reranking/: cross_encoder.rs  learning_to_rank.rs  mod.rs  multi_signal.rs  neural_reranker.rs
crates/rrag/src/retrieval/: bm25.rs  fusion.rs  hybrid.rs  mod.rs  semantic.rs
crates/rrag/src/security/: auth.rs  mod.rs
crates/rrag/src/storage/: README.md  database.rs  in_memory.rs  memory.rs  mod.rs  schema.toasty
crates/rsllm/: Cargo.toml  README.md
crates/rsllm-macros/: Cargo.toml
crates/rsllm-macros/src/: lib.rs
crates/rsllm/examples/: basic_usage.rs  complete_tool_application.rs  env_config_test.rs  minimal_tool_example.rs  ollama_test.rs  ollama_url_test.rs  openai_compatibility_test.rs  simple_complete_app.rs  simplified_tools.rs  test_macro_simple.rs  tool_calling_all_approaches.rs  tool_calling_auto_schema.rs  tool_calling_guide.rs  tool_calling_simple.rs  tool_calling_with_macro.rs  tool_individual_params.rs  tool_with_descriptions.rs
crates/rsllm/src/: client.rs  config.rs  error.rs  lib.rs  message.rs  provider.rs  response.rs  streaming.rs  tools.rs
crates/schemars/: README.md  README_VENDORED.md
crates/schemars/docs/_includes/: deriving.md
crates/schemars/docs/_includes/examples/: custom_serialization.rs  custom_settings.rs  enum_repr.rs  schemars_attrs.rs
crates/schemars/docs/_includes/examples_v0/: custom_serialization.rs  custom_settings.rs  schemars_attrs.rs  serde_attrs.rs
crates/schemars/docs/_v0/: 1-deriving.md
crates/schemars/schemars/examples/: doc_comments.rs  from_value.rs  main.rs  remote_derive.rs  serialize_contract.rs  validate.rs
crates/schemars/schemars/src/: generate.rs
examples/: Cargo.toml  advanced_reranking_demo.rs  agent_demo.rs  caching_performance_demo.rs  evaluation_demo.rs  getting_started_guide.rs  graph_retrieval_demo.rs  hybrid_search_demo.rs  incremental_indexing_demo.rs  multimodal_rag_demo.rs  observability_dashboard_demo.rs  production_deployment_demo.rs  query_processing_demo.rs  rgraph_demo.rs  rrag_comprehensive.rs  rrag_integration_demo.rs  rrag_rsllm_integration.rs  simple_agent.rs  simple_observability_demo.rs  test_ollama_integration.rs
