[package]
name = "rrag-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rrag_comprehensive"
path = "rrag_comprehensive.rs"

[[bin]]
name = "rrag_rsllm_integration"
path = "rrag_rsllm_integration.rs"

[[bin]]
name = "hybrid_search_demo"
path = "hybrid_search_demo.rs"

[[bin]]
name = "query_processing_demo"
path = "query_processing_demo.rs"

[[bin]]
name = "advanced_reranking_demo"
path = "advanced_reranking_demo.rs"

[[bin]]
name = "graph_retrieval_demo"
path = "graph_retrieval_demo.rs"

[[bin]]
name = "incremental_indexing_demo"
path = "incremental_indexing_demo.rs"

[[bin]]
name = "observability_dashboard_demo"
path = "observability_dashboard_demo.rs"

[[bin]]
name = "simple_observability_demo"
path = "simple_observability_demo.rs"

[[bin]]
name = "multimodal_rag_demo"
path = "multimodal_rag_demo.rs"

[[bin]]
name = "caching_performance_demo"
path = "caching_performance_demo.rs"

[[bin]]
name = "production_deployment_demo"
path = "production_deployment_demo.rs"

[[bin]]
name = "getting_started_guide"
path = "getting_started_guide.rs"

[[bin]]
name = "rgraph_demo"
path = "rgraph_demo.rs"

[[bin]]
name = "test_ollama_integration"
path = "test_ollama_integration.rs"

[[bin]]
name = "simple_agent"
path = "simple_agent.rs"

[features]
default = ["rsllm-client"]
rsllm-client = ["rrag/rsllm-client"]

[dependencies]
rrag = { path = "../crates/rrag", features = ["rsllm-client", "observability"] }
rrag-graph = { path = "../crates/rgraph" }
rsllm = { path = "../crates/rsllm", features = ["ollama", "macros"] }
schemars = { path = "../crates/schemars/schemars" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }